# Ritualist

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  PERFORMANCE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RUNTIME.md  pyproject.toml
docs/: BINDING_PRODUCT_DESIGN.md  DESKTOP_CANVAS_MODE.md  HERO_ROOMS_DOGFOOD.md  LIVE_GAMING_ACCEPTANCE.md  LOCAL_LEARNING.md  NORTH_STAR.md  NORTH_STAR_DOGFOOD.md  PRODUCT_BOUNDARIES.md  ROOMS.md  ROOM_BUILDER_ROADMAP.md  SHORTCUT_COMPONENTS.md  SUITE_PACKS.md  Setpiece_binding_product_design_spec.md  THEME_TOKENS.md  UI_DESIGN_SYSTEM.md  UI_MIGRATION_ROADMAP.md  UI_UX_CONVERGENCE.md  canvas.md  helpdesk_privacy_evidence.md  helpdesk_templates.md  intents_and_plans.md  mutating_risky_primitives_design.md  primitive_gap_report.md  roadmap.md  target_resolution.md
ritualist/: __init__.py  activity_collectors.py  activity_journal.py  activity_signals.py  app_setup.py  canvas_packs.py  capture_helpers.py  cli.py  config.py  desktop_entry.py  diagnostics.py  doctor.py  e2e.py  errors.py  event_coalescing.py  executor.py  intent_planner.py  layouts.py  learning_config.py  learning_service.py  learning_sources.py  local_activity_scan.py  logging_setup.py  models.py  onboarding.py  overlay.py  packs.py  paths.py  perf.py  policy.py  predicates.py  preferences.py  primitive_runtime.py  primitives.py  recipe_builder.py  recipe_loader.py  recipe_step_builder.py  recipe_transparency.py  rooms.py  run_logs.py  (+8 more)
scripts/: build_windows_app.ps1  check_line_endings.py  check_setpiece_rebrand.py  ritualist_live_gaming_acceptance.ps1  (+6 more)
(+461 files in other folders)
