[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ritualist"
version = "0.1.0"
description = "Local-first Windows desktop workflow automation for inspectable personal rituals."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ritualist" }]
dependencies = [
  "platformdirs>=4.2",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.2"]
gui = ["PySide6>=6.7"]
windows = ["psutil>=5.9", "pywinauto>=0.6.8", "pywin32>=306; platform_system == 'Windows'"]
all = [
  "playwright>=1.44",
  "psutil>=5.9",
  "PySide6>=6.7",
  "pywinauto>=0.6.8",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
ritualist = "ritualist.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
